[tool.poetry]
name = "census-comparison"
version = "0.1.0"
description = ""
authors = ["JD Bothma <jbothma@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "census_comparison"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
